<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textNomeRefeicao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/sushi_de_salm_o"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textDescricaoRefeicao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/salm_o_com_nosso_delicioso_arroz_temperado"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textPreco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/r_19_90"
        android:textColor="@android:color/holo_green_light"
        android:textSize="18sp"
        android:textStyle="bold" />

    <include layout="@layout/divisor" />

</LinearLayout>