<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".Activity.AutenticationActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/autentication" />

    <EditText
        android:id="@+id/edt_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/app_name"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:padding="12dp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/edt_senha_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginTop="-2dp"
        android:autofillHints="@string/app_name"
        android:ems="10"
        android:hint="@string/password"
        android:background="@drawable/bg_edit_text"
        android:inputType="textPassword" />

    <LinearLayout
        android:id="@+id/lnl_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_logar_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logar_switch_text"
            android:textStyle="normal" />

        <Switch
            android:id="@+id/btn_switch_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/txt_cadastrar_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:textStyle="normal" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_acessar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:text="@string/acessar"
        android:theme="@style/style_button_default"/>

    <Button
        android:id="@+id/btn_cadastrar_login"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:text="@string/cadastrar"
        android:textColor="#878787"
        android:background="@drawable/botao_cadastro"
        android:theme="@style/CardView"/>

</LinearLayout>