<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ConfiguracoesEmpresaActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_above="@id/progress_bar"
            android:layout_below="@id/edit_text_file_name"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/profile" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_choose_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="imagem" />

            <EditText
                android:id="@+id/edit_text_file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/button_choose_image"
                android:hint="nome da imagem" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/upload_image" />

            <TextView
                android:id="@+id/text_view_show_uploads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/button_upload"
                android:layout_alignBottom="@+id/button_upload"
                android:layout_marginStart="25dp"
                android:layout_toEndOf="@+id/button_upload"
                android:gravity="center"
                android:text="@string/show_upload"
                android:textSize="16sp" />

        </LinearLayout>


        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_upload"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />


        <EditText
            android:id="@+id/edt_nome_emp_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/nome_empresa"
            android:inputType="text"
            android:padding="13dp" />

        <EditText
            android:id="@+id/edt_categoria_emp_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/categoria"
            android:inputType="text"
            android:padding="13dp" />

        <EditText
            android:id="@+id/edt_tempo_emp_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/tempo_de_entrega"
            android:inputType="text"
            android:padding="13dp" />

        <EditText
            android:id="@+id/edt_taxa_emp_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/taxa_de_entrega"
            android:inputType="numberDecimal"
            android:padding="13dp" />

        <Button
            android:id="@+id/btn_salvar_emp_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="19dp"
            android:text="@string/salvar"
            android:theme="@style/style_button_default" />

    </LinearLayout>

</LinearLayout>